// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleRevisionDataloaderService load should load many 1`] = `
[
  [
    {
      "include": {
        "ArticleRevisionDraft": {
          "include": {
            "articleRevision": true,
          },
        },
        "ArticleRevisionPending": {
          "include": {
            "articleRevision": true,
          },
        },
        "ArticleRevisionPublished": {
          "include": {
            "articleRevision": true,
          },
        },
      },
      "where": {
        "id": {
          "in": [
            "123",
            "321",
          ],
        },
      },
    },
  ],
]
`;

exports[`ArticleRevisionDataloaderService load should load one 1`] = `
[
  [
    {
      "include": {
        "ArticleRevisionDraft": {
          "include": {
            "articleRevision": true,
          },
        },
        "ArticleRevisionPending": {
          "include": {
            "articleRevision": true,
          },
        },
        "ArticleRevisionPublished": {
          "include": {
            "articleRevision": true,
          },
        },
      },
      "where": {
        "id": {
          "in": [
            "123",
          ],
        },
      },
    },
  ],
]
`;

exports[`ArticleRevisionDataloaderService should prime 1`] = `
[
  "123",
  {},
]
`;
